2009-02-22  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/dictionary.hpp: Fix a bug in class Dictionary words(), tags(), tags_transit(), 
		which should return reference.
	* cpp/include/openclas/serialization.hpp: Fix a bug of missing initialize tags of Dictionary in load_from_file().
	* cpp/src/unit_test/unit_test_serialization.hpp: Change some CHECK to REQUIRE.

2009-02-22  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/serialization.hpp:
		Split get_tag_from_pos_value() to get_tag_from_pos() and get_name_from_pos().
		Add debug in openclas::ict::load_from_dct() for unknown tag.
		Fix a bug which forgot convert gb2312 to Unicode.
		Fix a bug for handling special word entries.
	* cpp/src/unit_test/unit_test_serialization.hpp: Implemented testcases for Serialization.

2009-02-22  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/dictionary.hpp:
		Rename find_prefixes() to prefix() of both class WordIndexer and class Dictionary.
		Add 3 overload prefix() for WordIndexer.
		Add 1 overload add() for WordIndexer.
		Add 1 overload get() for WordIndexer.
		Add 1 overload prefix() for Dictionary.
		Change prefix() return result type from std::list<T> to std::vector<T>.
		Add 1 overload get_word().
		Fix a bug in WordIndexer::add().
		Fix a bug in WordIndexer::remove().
	* cpp/include/openclas/segment.hpp: Modified corresponding to the rename from find_prefixex() to prefix().
	* cpp/src/unit_test/OpenClas_VS2008.vcproj: minor changes on optimization of Release version.
	* cpp/src/unit_test/unit_test_dictionary.hpp: Implemented Dictionary and related class testcases.

2009-02-19  Tao Wang  <dancefire@gmail.com>

	* cpp/include/openclas/common.hpp: Remove unordered_map
	* cpp/include/openclas/dictionary.hpp: Replace unordered_map with std::map
	* cpp/include/openclas/serialization.hpp: Fix bug about global variable locale_{gbk,utf8}
	* cpp/include/openclas/utility.hpp: Remove a test code.
	* cpp/src/unit_test/unit_test.cpp: remove all uncomments.